@@ -1,3 +1,9 @@
+2016-02-25  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 38024: Src/signals.c, Test/C03traps.ztst: improve 37999 to
+	allow nested zsh-mode EXIT traps not to remove a POSIX EXIT
+	trap.
+
 2016-02-19  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Etc/completion-style-guide: Clarify the term "variant".
